[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "blinker~=1.9.0",
    "click~=8.1.8",
    "cython~=3.0.12",
    "dotenv~=0.9.9",
    "flask~=3.1.0",
    "flask-cors>=5.0.1",
    "gunicorn>=23.0.0",
    "itsdangerous~=2.2.0",
    "jinja2~=3.1.6",
    "markupsafe~=3.0.2",
    "pip~=25.0.1",
    "psycopg2-binary>=2.9.10",
    "pyinstaller>=6.13.0",
    "pyppeteer>=2.0.0",
    "pyppeteer-stealth>=2.7.4",
    "pytest>=8.3.5",
    "pytest-playwright>=0.7.0",
    "requests~=2.32.3",
    "selenium>=4.31.0",
    "setuptools~=78.1.0",
    "spacy~=3.8.2",
    "waitress~=3.0.2",
    "werkzeug~=3.1.3",
    "wheel~=0.45.1",
]
