[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "blinker~=1.9.0",
    "click~=8.1.8",
    "cython~=3.0.12",
    "dotenv~=0.9.9",
    "flask~=3.1.0",
    "flask-cors>=5.0.1",
    "itsdangerous~=2.2.0",
    "jinja2~=3.1.6",
    "markupsafe~=3.0.2",
    "mysqlclient~=2.2.7",
    "pip~=25.0.1",
    "pytest>=8.3.5",
    "requests~=2.32.3",
    "setuptools~=78.1.0",
    "spacy~=3.8.2",
    "waitress~=3.0.2",
    "werkzeug~=3.1.3",
    "wheel~=0.45.1",
]
